<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/vertical_gradient_divider"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/partly_cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <View
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/vertical_gradient_divider"
        app:layout_constraintEnd_toStartOf="@+id/partly_cloudy"
        app:layout_constraintStart_toEndOf="@+id/cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_location_on_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/location_icon"
        app:layout_constraintStart_toStartOf="@+id/location_icon"
        app:layout_constraintTop_toBottomOf="@+id/location_icon" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/uv_fragment_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/location"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <ImageView
        android:id="@+id/gauge"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <ImageView
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_info_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gauge" />

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partly_cloudy"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/vertical_divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/vertical_gradient_divider"
        app:layout_constraintEnd_toStartOf="@+id/cloudy"
        app:layout_constraintStart_toEndOf="@+id/forecast"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <TextView
        android:id="@+id/cloudy"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="47dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/partly_cloudy"
        app:layout_constraintStart_toEndOf="@+id/forecast"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/cloudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <TextView
        android:id="@+id/partly_cloudy"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="47dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="50dp"
        android:layout_height="19dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/partly_cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pm1_0"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintStart_toStartOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pm2_5"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/cloudy"
        app:layout_constraintEnd_toEndOf="@+id/cloudy"
        app:layout_constraintStart_toStartOf="@+id/cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/o3"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/partly_cloudy"
        app:layout_constraintEnd_toEndOf="@+id/partly_cloudy"
        app:layout_constraintStart_toStartOf="@+id/partly_cloudy"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/no2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/forecast"
        app:layout_constraintEnd_toEndOf="@+id/forecast"
        app:layout_constraintStart_toStartOf="@+id/forecast"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vertical_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>